--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -27,6 +27,10 @@ on:
   push:
     branches:
       - main
+      
+concurrency:
+  group: deploy-azure
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -67,7 +71,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip install -r requirrequirements-finalements.txt
+        run: pip install -r requirements-final.txt
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
