--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -71,7 +71,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip install -r requirements-final.txt
+        run: pip install --no-deps -r requirements-final.txt
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
