--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -34,9 +34,6 @@ concurrency:
 
 jobs:
   build:
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     runs-on: ubuntu-latest
 
     steps:
@@ -78,23 +75,26 @@ jobs:
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
-    #  - name: Upload artifact for deployment jobs
-    #    uses: actions/upload-artifact@v3
-    #    with:
-    #      name: python-app
-    #      path: |
-    #        .
-    #        !venv/
-  # deploy:
-   # runs-on: ubuntu-latest
-   # needs: build
+      - name: Upload artifact for deployment jobs
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-app
+          path: |
+            .
+            !venv/
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-
-    #  - name: Download artifact from build job
-    #    uses: actions/download-artifact@v3
-    #    with:
-    #      name: python-app
-    #      path: .
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: python-app
+          path: .
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
