--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -59,9 +59,9 @@ jobs:
           echo "Adding back the ones we want..."
           cat requirements.txt >> requirements-new.txt
           cat requirements-new.txt | grep -vE "$(cat unrequirements.txt)" > requirements-final.txt
-          awk 'NF{print $0 " --no-deps"}' requirements-final.txt > requirements-final.txt
+          awk 'NF{print $0 " --no-deps"}' requirements-final.txt > requirements.txt
           echo "Installing these requirements:"
-          cat requirements-final.txt
+          cat requirements.txt
     
       - name: Set up dependency caching for faster installs
         uses: actions/cache@v3
