--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -22,6 +22,7 @@ name: Build and deploy Python app to Azure Web App
 env:
   AZURE_WEBAPP_NAME: VideoStickerCreator # set this to the name of your Azure Web App
   PYTHON_VERSION: "3.11" # set this to the Python version to use
+  VENV_PATH: "video-sticker-bot/venv"
 
 on:
   push:
@@ -46,14 +47,14 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          python -m venv venv
+          python3 -m venv ${{ env.VENV_PATH }}
           source venv/bin/activate
 
       - name: Install only the necessary packages
         run: |
           sudo apt install -y python3-dev python3.11-dev libpython3.11-dev  libpq-dev 
           echo "Getting all the dependencies of the requirements..."
-          pip freeze -r requirements.txt > requirements-new.txt
+          pip3 freeze -r requirements.txt > requirements-new.txt
           echo "Calculating the difference..."
           grep -v -x -f requirements-new.txt requirements.txt 
           echo "Adding back the ones we want..."
@@ -68,12 +69,12 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-final.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip install --no-deps -r requirements-final.txt
+        run: pip3 install --no-deps --binary-only -r requirements-final.txt
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
@@ -83,7 +84,7 @@ jobs:
           name: python-app
           path: |
             .
-            !venv/
+            !${{ env.VENV_PATH }}/
   deploy:
     runs-on: ubuntu-latest
     needs: build
