--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -47,14 +47,14 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          python3 -m venv ${{ env.VENV_PATH }}
+          python -m venv ${{ env.VENV_PATH }}
           source venv/bin/activate
 
       - name: Install only the necessary packages
         run: |
           sudo apt install -y python3-dev python3.11-dev libpython3.11-dev  libpq-dev 
           echo "Getting all the dependencies of the requirements..."
-          pip3 freeze -r requirements.txt > requirements-new.txt
+          pip freeze -r requirements.txt > requirements-new.txt
           echo "Calculating the difference..."
           grep -v -x -f requirements-new.txt requirements.txt 
           echo "Adding back the ones we want..."
@@ -74,14 +74,14 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip3 install --no-deps --binary-only -r requirements-final.txt
+        run: pip install --no-deps --binary-only -r requirements-final.txt
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
-          name: python-app
+          name: ${{ env.AZURE_WEBAPP_NAME }}
           path: |
             .
             !${{ env.VENV_PATH }}/
@@ -96,14 +96,14 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: python-app
+          name: ${{ env.AZURE_WEBAPP_NAME }}
           path: .
 
       - name: "Deploy to Azure Web App"
         env:
           CUSTOM_REQUIREMENTSTXT_PATH: requirements-final.txt
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+        uses: azure/webapps-deploy@2.2.6
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
