--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -44,9 +44,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
 
       - name: Create and start virtual environment
         run: |
+          pip install --upgrade virtualenv
           python -m venv ${{ env.VENV_PATH }}
           source venv/bin/activate
 
