--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -77,7 +77,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip install --no-deps --binary-only -r requirements-final.txt
+        run: pip install  --install-option="--no-deps" --install-option="--only-binary" -r requirements-final.txt
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
