--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -64,7 +64,7 @@ jobs:
           cat requirements.txt >> requirements-new.txt
           cat requirements-new.txt | grep -vE "$(cat unrequirements.txt)" > requirements-final.txt
           cat requirements-always-require.txt >> requirements-final.txt
-          awk 'NF{print $0 " --install-option=\"--no-deps\" --install-option=\"--only-binary\""}' requirements-final.txt > requirements.txt
+          #awk 'NF{print $0 " --install-option=\"--no-deps\" --install-option=\"--only-binary\""}' requirements-final.txt > requirements.txt
           echo "Installing these requirements:"
           cat requirements.txt
 
