--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install  --no-deps --prefer-binary :all: -r requirements-final.txt
+          pip install  --no-deps --prefer-binary -r requirements-final.txt
           pip install -r no-options-requirements.txt
         
 
