--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -110,7 +110,7 @@ jobs:
         env:
           CUSTOM_REQUIREMENTSTXT_PATH: requirements-final.txt
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@2.2.6
+        uses: azure/webapps-deploy@v2.2.6
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
