--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -23,7 +23,7 @@ env:
   AZURE_WEBAPP_NAME: VideoStickerCreator # set this to the name of your Azure Web App
   PYTHON_VERSION: "3.11" # set this to the Python version to use
   WORKING_DIRECTORY: "./"
-  VENV_PATH: ${{ env.WORKING_DIRECTORY }} + "video-sticker-bot/venv"
+  VENV_PATH: "./video-sticker-bot/venv"
 
 on:
   push:
