--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -47,7 +47,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: pip
           check-latest: true
-          update-environment: true
+          update-environment: false
 
       - name: Create and start virtual environment
         working-directory: ${{ env.WORKING_DIRECTORY }}
