--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -45,9 +45,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: pip
           check-latest: true
-          update-environment: false
+          update-environment: true
 
       - name: Create and start virtual environment
         working-directory: ${{ env.WORKING_DIRECTORY }}
