--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -54,8 +54,8 @@ jobs:
           # sudo apt install libpq-dev python3-wheel
           python -m ${{ env.VENV_NAME }} --copies antenv
           source antenv/bin/activate
-          python -m venv ${{ env.VENV_NAME }}
-          source ${{ env.VENV_NAME }}/bin/activate
+          #python -m venv ${{ env.VENV_NAME }}
+          #source ${{ env.VENV_NAME }}/bin/activate
 
       - name: Install only the necessary packages
         working-directory: ${{ env.WORKING_DIRECTORY }}
