--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -52,7 +52,7 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           # sudo apt install libpq-dev python3-wheel
-          python -m ${{ env.VENV_NAME }} --copies antenv
+          python -m venv ${{ env.VENV_NAME }} 
           source antenv/bin/activate
           #python -m venv ${{ env.VENV_NAME }}
           #source ${{ env.VENV_NAME }}/bin/activate
@@ -111,7 +111,7 @@ jobs:
       
       - name: Activate the venv
         run:
-          python -m ${{ env.VENV_NAME }} --copies antenv
+          python -m venv ${{ env.VENV_NAME }} 
           source ${{ env.VENV_NAME }}/bin/activate
 
       - name: "Deploy to Azure Web App"
