--- a/.github/workflows/azure-webapps-python-deploy.yml
+++ b/.github/workflows/azure-webapps-python-deploy.yml
@@ -70,6 +70,7 @@ jobs:
           cat requirements-final.txt | grep -vE "$(cat no-options-requirements.txt)" > requirements-final.txt
           cat requirements-always-require.txt >> requirements-final.txt
           #awk 'NF{print $0 " --install-option=\"--no-deps\" --install-option=\"--only-binary\""}' requirements-final.txt > requirements.txt
+          mv requirements-final.txt requirements.txt
           echo "Installing these requirements:"
           cat requirements.txt
 
@@ -77,14 +78,14 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-final.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
-          pip install  --no-deps --prefer-binary -r requirements-final.txt
+          pip install  --no-deps --prefer-binary -r requirements.txt
           pip install -r no-options-requirements.txt
         
 
@@ -95,6 +96,7 @@ jobs:
         with:
           name: ${{ env.AZURE_WEBAPP_NAME }}
           path: ./**
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
